@@ -1,3 +1,7 @@
+2013-03-07  Julien Moutte <julien@fluendo.com>
+
+	* examples/multidl.c: (data_cb), (done_cb): Fix build on 64 bits.
+
 2013-03-06  Xavi Artigas  <xartigas@fluendo.com>
 
 	* lib/fludownloader.c: (_report_task_done):
